k8s-v2/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: smartstock-auth:1.0
          imagePullPolicy: Never
          ports:
            - containerPort: 5002
