k8s-v2/inventory-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory
  template:
    metadata:
      labels:
        app: inventory
    spec:
      containers:
        - name: inventory
          image: smartstock-inventory:1.0
          imagePullPolicy: Never
          ports:
            - containerPort: 3004
