k8s-v2/product-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
        - name: product
          image: smartstock-product:1.0
          imagePullPolicy: Never
          ports:
            - containerPort: 3002
