k8s-v2/sales-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sales
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sales
  template:
    metadata:
      labels:
        app: sales
    spec:
      containers:
        - name: sales
          image: smartstock-sales:1.0
          imagePullPolicy: Never
          ports:
            - containerPort: 4004
