k8s-v2/supplier-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: supplier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: supplier
  template:
    metadata:
      labels:
        app: supplier
    spec:
      containers:
        - name: supplier
          image: smartstock-supplier:1.0
          imagePullPolicy: Never
          ports:
            - containerPort: 3003
