k8s-v2/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  selector:
    app: auth
  ports:
    - port: 5002
      targetPort: 5002
