k8s-v2/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  type: NodePort
  selector:
    app: gateway
  ports:
    - port: 4000
      targetPort: 4000
      nodePort: 30000
