k8s-v2/inventory-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory
spec:
  selector:
    app: inventory
  ports:
    - port: 4003
      targetPort: 4003
