k8s-v2/mock-mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mock-db
  labels:
    app: mock-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mock-db
  template:
    metadata:
      labels:
        app: mock-db
    spec:
      containers:
      - name: mongodb
        image: mongo:6.0
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mock-db
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    app: mock-db
