k8s-v2/product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product
spec:
  selector:
    app: product
  ports:
    - port: 3002
      targetPort: 3002
