k8s-v2/sales-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sales
spec:
  selector:
    app: sales
  ports:
    - port: 3005
      targetPort: 3005
