k8s-v2/supplier-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: supplier
spec:
  selector:
    app: supplier
  ports:
    - port: 3003
      targetPort: 3003
