k8s-v2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smartstock-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: aupp.com
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 4000
          - path: /product
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 4000
          - path: /supplier
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 4000
          - path: /inventory
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 4000
          - path: /sales
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 4000
